--- a/testes-1/teste001/style.css
+++ b/testes-1/teste001/style.css
@@ -10,9 +10,10 @@ h1{
 
 main{
   display: grid;
-  grid-template-columns: 250px 300px;
+  grid-template-columns: 300px 300px;
+  height: 700px;
   gap: 20px;
-  align-content: space-around;
+  place-content: center space-around ;
 }
 
 .item{
