--- a/JavaScrpit/dominicial/classeseatributos copy/css/style.css
+++ b/JavaScrpit/dominicial/classeseatributos copy/css/style.css
@@ -3,13 +3,13 @@ margin: 0px;
 padding: 0px;
 }
 
-html.textomaior{
-  font-size: xx-large;
-}
-
 img{
   display: block;
   max-width: 100%;
+}
+
+.azul{
+  background-color: aqua;
 }
 
 ul{
